--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 Django==5.0.2
 django-autoslug==1.9.9
+django-environ==0.11.2
 gunicorn==21.2.0
 idna==3.6
+mysqlclient==2.2.4
 packaging==24.0
 requests==2.31.0
 sqlparse==0.4.4
