--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,31 @@
 asgiref==3.7.2
+beautifulsoup4==4.12.3
+boto3==1.34.69
+botocore==1.34.69
 certifi==2024.2.2
 charset-normalizer==3.3.2
+cloudinary==1.39.1
 Django==5.0.2
 django-autoslug==1.9.9
+django-cloudinary-storage==0.3.0
 django-environ==0.11.2
+django-htmlmin==0.11.0
+django-storages==1.14.2
 gunicorn==21.2.0
+html5lib==1.1
 idna==3.6
+jmespath==1.0.1
 mysqlclient==2.2.4
 packaging==24.0
+pillow==10.2.0
+python-dateutil==2.9.0.post0
 requests==2.31.0
+s3transfer==0.10.1
+six==1.16.0
+soupsieve==2.5
 sqlparse==0.4.4
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
+webencodings==0.5.1
 whitenoise==6.6.0
