--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,20 @@ django-autoslug==1.9.9
 django-cloudinary-storage==0.3.0
 django-environ==0.11.2
 django-htmlmin==0.11.0
+django-jazzmin==2.6.1
 django-storages==1.14.2
+fuzzywuzzy==0.18.0
 gunicorn==21.2.0
 html5lib==1.1
 idna==3.6
 jmespath==1.0.1
+Levenshtein==0.25.0
 mysqlclient==2.2.4
 packaging==24.0
 pillow==10.2.0
 python-dateutil==2.9.0.post0
+python-Levenshtein==0.25.0
+rapidfuzz==3.7.0
 requests==2.31.0
 s3transfer==0.10.1
 six==1.16.0
