--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,13 @@ beautifulsoup4==4.12.3
 boto3==1.34.69
 botocore==1.34.69
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 cloudinary==1.39.1
+cryptography==42.0.5
+defusedxml==0.7.1
 Django==5.0.2
+django-allauth==0.61.1
 django-autoslug==1.9.9
 django-cloudinary-storage==0.3.0
 django-environ==0.11.2
@@ -19,12 +23,17 @@ idna==3.6
 jmespath==1.0.1
 Levenshtein==0.25.0
 mysqlclient==2.2.4
+oauthlib==3.2.2
 packaging==24.0
 pillow==10.2.0
+pycparser==2.22
+PyJWT==2.8.0
 python-dateutil==2.9.0.post0
 python-Levenshtein==0.25.0
+python3-openid==3.2.0
 rapidfuzz==3.7.0
 requests==2.31.0
+requests-oauthlib==2.0.0
 s3transfer==0.10.1
 six==1.16.0
 soupsieve==2.5
